--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -1,10 +1,98 @@
 @import '../../assets/styles/header.css';
 @import '../../assets/styles/banner.css';
-@import '../../assets/styles/description.css';
 @import '../../assets/styles/backstage.css';
 @import '../../assets/styles/pets.css';
+@import '../../assets/styles/pick.css';
+@import '../../assets/styles/testimonials.css';
+@import '../../assets/styles/normalize.css';
+@import '../../assets/styles/footer.css';
 @import '../../assets/styles/fonts.css';
 
 body {
-    font-family: Roboto;
+    font-family: 'Roboto';
+    min-width: 320px;
+    min-height: 100vh;
+    /* z-index: 1; */
 }
+a {
+    text-decoration: none;
+}
+.container {
+    max-width: 1160px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.popup {
+    width: 100%;
+    height: 100%;
+    background: rgba(50, 50, 50, 0.9);
+    transition: all 0.4s;
+    position: fixed;
+    z-index: 10;
+    display: none;
+    animation-duration: 1s;
+    animation-name: slidein;
+}
+@keyframes slidein {
+    from {
+      opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+  }
+.popup__window {
+    position: absolute;
+    width: 300px;
+    height: 100px;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%,-50%);
+}
+.popup__close {
+    position: absolute;
+    z-index: 1;
+    right: -280px;
+    top: 10px;
+    cursor: pointer;
+}
+
+
+@media all and (min-width: 1000px) and (max-width: 1590px) {
+    .container {
+        max-width: 1000px;
+    }
+}
+
+@media all and (min-width:640px) and (max-width: 999px){
+    .container { 
+        width: 600px;
+    }
+}
+
+@media all and (min-width:320px) and (max-width: 639px){
+    .container { 
+        width: 280px;
+    }
+
+    .popup__window {
+        position: absolute;
+        width: 270px;
+        height: 100px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+    .popup__close {
+        position: absolute;
+        z-index: 1;
+        right: -5px;
+        top: 5px;
+        cursor: pointer;
+        transform: scale(-60%)
+    }
+}
+
+
